# gudlink_rust

./: Cargo.toml  README.md
src/: lib.rs  libs.rs  main.rs  tests.rs
src/libs/: constants.rs  db.rs  error.rs  hbs_helpers.rs  model.rs  routes.rs
src/libs/model/: folder.rs  group.rs  link.rs  media.rs  page.rs  page_element.rs  subscription.rs  user.rs
static/css/: page-style.css  style.css
templates/: error.hbs  gud-page.hbs  index.hbs  unexpected.hbs
templates/partials/: folder_content.hbs  gud-header.hbs  pages.hbs
