[package]
name = "gudlink"
version = "0.1.0"
authors = ["Murilo Reis <muriloreisriosalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.2.1"
tokio = { version = "1.5.0", features = ["full"] }
tokio-compat-02 = "0.2.0"
async-trait = "0.1.50"
futures-util = "0.3.14"
anyhow = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"